# mulle-testgen

./: .gitignore  .touch  CMakeLists.txt  CMakePackage.cmake  README.md  RELEASENOTES.md  clib.json  mulle-testgen  mulle-testgen.sublime-project  package.json  social.xcf
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-host-kempe.sh  environment-host-walitza.sh  environment-project.sh  environment-user-nat-os-linux.sh
.mulle/etc/project/: version-info.sh
.mulle/share/env/: environment-project.sh
.mulle/share/sde/: extension
.travis.d/: script
cola/: description.md.bud  properties.plist  usage.md.bud
src/: mulle-testgen-generate.sh  mulle-testgen-plugin.sh
src/plugins/: NSArray_pointer.sh  NSCoder_pointer.sh  NSData_pointer.sh  NSDate_pointer.sh  NSDictionary_pointer.sh  NSMutableArray_pointer.sh  NSMutableData_pointer.sh  NSMutableSet_pointer.sh  NSMutableString_pointer.sh  NSNumber_pointer.sh  NSRange.sh  NSRange_pointer.sh  NSSet_pointer.sh  NSStringEncoding.sh  NSString_pointer.sh  char.sh  id.sh  int.sh  long.sh  long_long.sh  short.sh  unsigned_char.sh  unsigned_int.sh  unsigned_long.sh  unsigned_long_long.sh  unsigned_short.sh
src/plugins/method/: encodeWithCoder_.sh  initWithCoder_.sh  initWithObject_mulleVarargList_.sh  initWithObject_varargList_.sh  initWithObjects_.sh  initWithObjects_count_.sh
src/plugins/type/: BOOL.sh  Class.sh  NSArray_pointer.sh  NSCoder_pointer.sh  NSData_pointer.sh  NSDate_pointer.sh  NSRange.sh  (+37 more)
test/: run-test
test/10_method/: ex1.txt  ex2.txt  ex3.txt  run-test
(+5 files in other folders)
